# sb-image-decoding

./: .gitignore  .gitmodules  README.md  constants.py  eval.py  nohup.out  preproc.py  pretrain.py  pyproject.toml  requirements.txt  tar_face_images.sh
assets/: god_channel_names.csv  god_trn_prefix2class.csv
brain2face/: _train_decoder.py  _train_diffusion_prior.py  constants.py  datasets.py  eval.py  eval_clip.py  eval_image_decoder.py  eval_image_pipeline.py  eval_pipeline.py  eval_video_pipeline.py  models.py  train.py  train_clip.py  train_decoder.py  train_diffusion_prior.py  train_image_decoder.py  train_prior.py  train_video_decoder.py
configs/: _diffusion_prior.json  config.yaml  decoder.json  decoder.yaml  default.yaml  diffusion_prior.json  diffusion_prior.yaml  image_decoder.yaml  sample_unidiffuser.py  stylegan.yaml  uhd.yaml  video_decoder.yaml  ylab_ecog.yaml  zero_stage3_offload_config.json
nd/: eval_clip.py  eval_diffusion_cond.py  eval_image_decoder.py  eval_schrodinger_bridge.py  eval_video_pipeline.py  plot_similarity_with_high_categories.py  plot_subjectwise_latents.py  sample_b2i_discrete.py  sample_b2i_unidiff.py  sample_multi.py  train_autoencoder.py  train_brain_denoiser.py  train_clip.py  train_clip_text.py  train_diffusion_cond.py  train_image_decoder.py  train_prior.py  train_schrodinger_bridge.py  train_video_decoder.py
notebooks/: clip_2d_analysis.ipynb  clip_text_analysis.ipynb  hypersphere.ipynb  ica.ipynb
sbid/: eval_diffusion_cond.py  eval_schrodinger_bridge.py  train_autoencoder.py  train_clip.py  train_diffusion_cond.py  (+1 more)
(+164 files in other folders)
