[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "brain2face"
description = "brain2face"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
# requires-python = ""
# dependencies = []

[project.optional-dependencies]
dev = [
  "black",
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]