[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sbid"
description = "Direct Generation of Images from EEG using Schrödinger Bridge"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black"]

[tool.setuptools]
package-dir = {"" = "sbid"}

[tool.setuptools.packages.find]
exclude = ["build", "tests"]